improve: expand 10 articles from 980w to 1995-2527w (wave 44)
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>